# VTMaps

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/thanhdo/vtmaps/: ExampleInstrumentedTest.java  NativeTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shader/: default.glsl
app/src/main/cpp/: CMakeLists.txt  CMakeUserPresets.json  Camera.cpp  Camera.h  Image1.cpp  Image1.h  Mesh.cpp  Mesh.h  Plain.cpp  Plain.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  Viewer.cpp  Viewer.h  adder.cpp  adder.h  conanfile.txt  native-lib.cpp  stb_impl.cpp
app/src/main/cpp/Activities/: MainActivity.cpp
app/src/main/cpp/Engine/: Camera.cpp  Camera.h  Core.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h
app/src/main/cpp/Engine/Component/: Component.cpp  Component.h  Renderer.cpp  Renderer.h  Terrain.cpp  Terrain.h  Transform.cpp  Transform.h
app/src/main/cpp/Engine/Resource/: FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.h
app/src/main/cpp/Engine/Resource/Material/: DefaultMaterial.cpp  DefaultMaterial.h  Material.cpp  Material.h
app/src/main/cpp/Engine/Shape/: Plain.cpp  Plain.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
app/src/main/cpp/Engine/System/: Manager.cpp  Manager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
app/src/main/cpp/Engine/System/Resource/: MaterialManager.cpp  MaterialManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
app/src/main/cpp/Engine/Utility/: File.cpp  File.h  JNIHelper.cpp  JNIHelper.h  Logger.h  Singleton.h
app/src/main/cpp/Material/: DefaultMaterial.cpp  DefaultMaterial.h  Material.h
app/src/main/cpp/Resource/: FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Image1.cpp  Image1.h  Texture.cpp  Texture.h
app/src/main/cpp/Resource/Material/: DefaultMaterial.cpp  DefaultMaterial.h  Material.cpp  Material.h  PhongMaterial.cpp  PhongMaterial.h
app/src/main/cpp/Unit Test/: test.cpp
app/src/main/cpp/Utilities/: JNIHelper.cpp  JNIHelper.h  Logger.h
app/src/main/cpp/graphics/: GLUtils.cpp  GLUtils.h  Matrix.cpp
app/src/main/cpp/jniCalls/: MainActivity.cpp
app/src/main/java/com/thanhdo/vtmaps/: LessonOneNativeRenderer.java  MainActivity.java  MainRenderer.java  Utils.java
app/src/main/java/com/thanhdo/vtmaps/Graphics/: OpenGLRenderer.java  OpenGLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/thanhdo/vtmaps/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
